2013-04-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars: Improved use as well as a new possible overrride of
	/usr/bin/install_name_tool on OS X, once again contributed by Simon

2013-04-16  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/sugar/functions/na_omit.h : new function na_omit to remove
        missing values from a vector.
        * src/attributes.cpp : portability fix (from Martyn Plummer)
        * include/Rcpp/api/meat/Vector.h : portability fix (from Martyn Plummer)

2013-04-14  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/traits/is_na.h: complex version did not work.
        added default for VECSXP and EXPRSXP versions

2013-04-02  Dirk Eddelbuettel  <edd@debian.org>

	* src/Date.cpp: Corrected operator-() for Date and Datetime objects
	to behave more inline with C++ standard

	* inst/include/Rcpp/Date.h: operator-() for Dates now returns a
	double as the date itself is fractional double since epoch

	* inst/unitTests/cpp/dates.cpp: New file with C++ portion of tests
	factored out from R unit test file
	* inst/unitTests/runit.Date.R: Rewritten for use with new C++ tests

2013-04-02 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/generated/DataFrame_generated.h : DateFrame::create
        uses List::create and then feeds to the DataFrame constructor, which
        seems to work better than the previous approach of calling back to the
        data.frame function in R
        * include/Rcpp/DataFrame.h : private function from_list, to help
        the new implementation of DataFrame::create
        * src/api.cpp : impl of DataFrame::from_list

2013-03-31  Dirk Eddelbuettel  <edd@debian.org>

	* debian/control (Build-Depends): Modified for Debian-only rebuilds
	under (rc version of upcoming) R 3.0.0 release
	* debian/changelog: Entry for Debian build 0.10.3-2

2013-03-29  Dirk Eddelbuettel  <edd@debian.org>

	* src/api.cpp (Rcpp): Re-enable coerce_to_string<>() for real and