@@ -16,15 +16,16 @@
     }
     \item Changes in Rcpp sugar:
     \itemize{
-        \item New function \code{na_omit} based on the StackOverflow thread
-        http://stackoverflow.com/questions/15953768/templated-rcpp-function-to-erase-na-values
+      \item New function \code{na_omit} based on the StackOverflow thread
+      http://stackoverflow.com/questions/15953768/templated-rcpp-function-to-erase-na-values
     }
     \item Changes in Rcpp build tools:
     \itemize{
-        \item Fix (from Martyn Plummer) for solaris in handling SingleLogicalResult.     
-	\item The \code{src/Makevars} file can now optionally ovveride the
-	path for \code{/usr/bin/install_name_tool} which is used on OS X.
+      \item Fix (from Martyn Plummer) for solaris in handling SingleLogicalResult.     
+      \item The \code{src/Makevars} file can now optionally ovveride the
+      path for \code{/usr/bin/install_name_tool} which is used on OS X.
     }
+  }
 }
 
 \section{Changes in Rcpp version 0.10.3 (2013-03-23)}{
